// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StopsSidebar it renders 1`] = `
<div
  className="m-tnm-sidebar"
  id="tnm-sidebar-by-stops"
>
  <div
    className="m-tnm-sidebar__fixed-header"
  >
    <div
      className="m-tnm-sidebar__fixed-header-inner"
    >
      <div
        className="m-tnm-sidebar__filter-bar"
      >
        <span
          className="m-tnm-sidebar__filter-header u-small-caps"
        >
          Filter
        </span>
        <div
          className="c-mode-filter__filter-btn-group"
        >
          <button
            aria-label="add filter by subway"
            className="btn btn-secondary btn-sm m-tnm-sidebar__filter-btn inactive"
            id="mode-button__subway"
            onClick={[Function]}
            type="button"
          >
            <span
              className="m-tnm-sidebar__mode-icon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
            Subway
          </button>
          <button
            aria-label="add filter by bus"
            className="btn btn-secondary btn-sm m-tnm-sidebar__filter-btn inactive"
            id="mode-button__bus"
            onClick={[Function]}
            type="button"
          >
            <span
              className="m-tnm-sidebar__mode-icon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
            Bus
          </button>
        </div>
        <div
          className="c-mode-filter__filter-btn-group"
        >
          <button
            aria-label="add filter by commuter_rail"
            className="btn btn-secondary btn-sm m-tnm-sidebar__filter-btn inactive"
            id="mode-button__commuter_rail"
            onClick={[Function]}
            type="button"
          >
            <span
              className="m-tnm-sidebar__mode-icon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
            Rail
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-tnm-sidebar__inner"
  >
    <div
      className="col-sm-8 m-tnm-sidebar__header"
    >
      <div
        className="m-tnm-sidebar__header-title"
      >
        <h2>
          Nearby Stops
        </h2>
        <div
          className="m-tnm-sidebar__view-change"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          Change view
        </div>
      </div>
    </div>
    <div
      className="m-tnm-sidebar__cards"
    >
      <div
        className="m-tnm-sidebar__stop-card"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
          }
        }
        tabIndex={0}
      >
        <div
          className="m-tnm-sidebar__stop-card-header"
        >
          <a
            className="m-tnm-sidebar__stop-card-name"
          >
            Malden Center
          </a>
          <div
            className="m-tnm-sidebar__stop-distance"
          >
            288 ft
          </div>
        </div>
        <div
          className="m-tnm-sidebar__stop-card-description"
        >
          <span
            className="m-tnm-sidebar__stop-route-name"
          >
            <span
              className="m-tnm-sidebar__mode-icon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
            <span>
              <a>
                Orange Line
              </a>
              
            </span>
          </span>
        </div>
        <div
          className="m-tnm-sidebar__stop-card-description"
        >
          <span
            className="m-tnm-sidebar__stop-route-name"
          >
            <span
              className="m-tnm-sidebar__mode-icon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
            <a>
              Commuter Rail
            </a>
          </span>
        </div>
        <div
          className="m-tnm-sidebar__stop-card-description"
        >
          <span
            className="m-tnm-sidebar__stop-route-name"
          >
            <span
              className="m-tnm-sidebar__mode-icon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
            <span>
              Bus: 
              <a>
                97
              </a>
              , 
              <a>
                99
              </a>
              , 
              <a>
                101
              </a>
              , 
              <a>
                104
              </a>
              , 
              <a>
                105
              </a>
              , 
              <a>
                106
              </a>
              , 
              <a>
                108
              </a>
              , 
              <a>
                131
              </a>
              , 
              <a>
                132
              </a>
              , 
              <a>
                136
              </a>
              , 
              <a>
                137
              </a>
              , 
              <a>
                411
              </a>
              , 
              <a>
                430
              </a>
              
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StopsSidebar it returns null when there isn't data 1`] = `
<div
  className="m-tnm-sidebar"
  id="tnm-sidebar-by-stops"
>
  <div
    className="m-tnm-sidebar__fixed-header"
  >
    <div
      className="m-tnm-sidebar__fixed-header-inner"
    >
      <div
        className="m-tnm-sidebar__filter-bar"
      >
        <span
          className="m-tnm-sidebar__filter-header u-small-caps"
        >
          Filter
        </span>
        <div
          className="c-mode-filter__filter-btn-group"
        >
          <button
            aria-label="add filter by subway"
            className="btn btn-secondary btn-sm m-tnm-sidebar__filter-btn inactive"
            id="mode-button__subway"
            onClick={[Function]}
            type="button"
          >
            <span
              className="m-tnm-sidebar__mode-icon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
            Subway
          </button>
          <button
            aria-label="add filter by bus"
            className="btn btn-secondary btn-sm m-tnm-sidebar__filter-btn inactive"
            id="mode-button__bus"
            onClick={[Function]}
            type="button"
          >
            <span
              className="m-tnm-sidebar__mode-icon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
            Bus
          </button>
        </div>
        <div
          className="c-mode-filter__filter-btn-group"
        >
          <button
            aria-label="add filter by commuter_rail"
            className="btn btn-secondary btn-sm m-tnm-sidebar__filter-btn inactive"
            id="mode-button__commuter_rail"
            onClick={[Function]}
            type="button"
          >
            <span
              className="m-tnm-sidebar__mode-icon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
            Rail
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-tnm-sidebar__inner"
  >
    <div
      className="col-sm-8 m-tnm-sidebar__header"
    >
      <div
        className="m-tnm-sidebar__header-title"
      >
        <h2>
          Nearby Stops
        </h2>
        <div
          className="m-tnm-sidebar__view-change"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          Change view
        </div>
      </div>
    </div>
    <div
      className="m-tnm-sidebar__cards"
    >
      <div>
        No data
      </div>
    </div>
  </div>
</div>
`;
